# TanksGame

./: .gitignore  CMakeLists.txt  HW1.sln  HW1.vcxproj  HW1.vcxproj.filters  High Level design and diagrams.docx  README.md  TanksGame.sln  TanksGame.vcxproj  TanksGame.vcxproj.filters  algorithm.h  board.cpp  board.h  bonus.txt  cell.cpp  config.ini  gameManager.h  generate_config.py  input_errors.txt  movableObject.h  output.txt  player.h  shell.cpp  tank.cpp  tank.h  wall.cpp
Algorithm/: CMakeLists.txt
Algorithm/include/: smart_battle_info.h
Algorithm/include/algorithms/: algorithm_base.h  seed_algorithm.h  simple_algorithm.h  smart_algorithm.h  user_algorithm.h
Algorithm/include/players/: player_base.h  simple_player.h  smart_player.h
Algorithm/src/algorithms/: algorithm_base.cpp  simple_algorithm.cpp  smart_algorithm.cpp  user_algorithm.cpp
Algorithm/src/players/: player_base.cpp  simple_player.cpp  smart_player.cpp
GameManager/: CMakeLists.txt
GameManager/include/: board.h  game_info.h  game_manager.h  output_logger.h
GameManager/src/: board.cpp  game_manager.cpp  output_logger.cpp
Simulator/: CMakeLists.txt
Simulator/include/: arguments_parser.h  comparable_game_result.h  game_map_info.h  simulator.h  simulator_exception.h
Simulator/include/registrations/: algorithm_registrar.h  game_manager_registrar.h  registrar_adapter.h
Simulator/src/: arguments_parser.cpp  input_errors_logger.cpp  main.cpp  simulator.cpp
Simulator/src/registrations/: GameManagerRegistration.cpp  PlayerRegistration.cpp  TankAlgorithmRegistration.cpp  algorithm_registrar.cpp  game_manager_registrar.cpp
UserCommon/include/: board_satellite_view.h  cell.h  game_object_interface.h  global_config.h  mine.h  shell.h  tank.h  utils.h  wall.h
UserCommon/include/factory/: concrete_player_factory.h  concrete_tank_algorithm_factory.h
UserCommon/include/printers/: ansi_printer.h  default_printer.h  printer.h
UserCommon/include/types/: position.h
UserCommon/src/: cell.cpp  movable_object.cpp  utils.cpp
common/: AbstractGameManager.h  ActionRequest.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerFactory.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h  TankAlgorithmRegistration.h
includes/: algorithm.h  board.h  board_battle_info.h  board_satellite_view.h  cell.h  direction.h  gameManager.h  gameObject.h  game_info.h  game_manager.h  global_config.h  input_errors_logger.h  mine.h  movableObject.h  movable_object.h  output_logger.h  player.h  position.h  shell.h  smart_battle_info.h  tank.h  tankAction.h  wall.h
includes/algorithms/: aggressive_chase_algorithm.h  algorithm_base.h  algorithm_interface.h  algorithm_utils.h  seed_algorithm.h  simple_algorithm.h  smart_algorithm.h  user_algorithm.h
includes/factory/: concrete_player_factory.h  concrete_tank_algorithm_factory.h
includes/players/: concrete_player.h  concrete_player_1.h  concrete_player_2.h  player_base.h  player_utils.h  simple_player.h  smart_player.h
includes/printers/: ansi_printer.h  default_printer.h  printer.h
includes/types/: direction.h  position.h  tank_action.h
resources/: big_input.txt  game_map.txt  input.txt  input_a.txt  input_b.txt  input_c.txt  output_a.txt  output_b.txt  output_big_input.txt  output_c.txt  output_input.txt
resources/resources/: game_map.txt
src/: board.cpp  cell.cpp  game_manager.cpp  input_errors_logger.cpp  main.cpp  mine.cpp  movableObject.cpp  movable_object.cpp  output_logger.cpp  player.cpp  shell.cpp  smart_battle_info.cpp  tank.cpp  wall.cpp
src/algorithms/: algorithm_base.cpp  algorithm_interface.cpp  algorithms_utils.cpp  simple_algorithm.cpp  smart_algorithm.cpp  user_algorithm.cpp
src/players/: player_base.cpp  simple_player.cpp  smart_player.cpp
test/: board.txt  test_game_logic.cpp  test_main.cpp
